# magik-and-clay

./: CMakeLists.txt  README.md
code/: tilemap_data.h
code/camera/: camera.cpp  camera.h
code/common/: ring_buffer.h  types.h  utils.cpp  utils.h
code/game/: game.cpp  game.h
code/input/: input.cpp  input.h
code/renderer/: renderer.cpp  renderer.h  renderer_d3d11.cpp  renderer_d3d11.h
code/renderer/backend/: d3d11_backend.cpp  d3d11_backend.h
code/win32/: win_core.cpp  win_core.h  win_input.cpp  win_input.h  win_main.cpp
data/shaders/: basicps.hlsl  basicvs.hlsl
data/tilemap/: tilemap1.csv
src/win32/: win_main.cpp
